--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+div::before {
+    content: "Before Element";
+    color: red;
+}
+div::after {
+	content: "After Element";
+    color: red;
+}
+}
